examples/k8stest/conf/HTTPRoute/Backend/Timeout/HTTPRoute_default_timeout-client.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: timeout-client
  namespace: edgion-default
spec:
  parentRefs:
    - name: timeout-gateway
      namespace: edgion-test
  hostnames:
    - "timeout-client.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: timeout-debug
      timeouts:
        backendRequest: "10s"    # ，
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
